@@ -1,3 +1,11 @@
 # CloudStorage
-Облачное хранилище
+## Облачное хранилище  - учебный проект GeekBrains
 
+- **Login/password:** 1/1, 2/2, 3/3, 4/4
+
+- для корректного запуска: внести в параметры старта VM клиента и сервера:
+```
+--add-opens java.base/jdk.internal.misc=io.netty.all
+--add-opens java.base/java.nio=io.netty.all
+-Dio.netty.tryReflectionSetAccessible=true
+```
